# cmake_subproject_example

./: CMakeLists.txt  README  build.bat
project1/: CMakeLists.txt
project1/include/: math.hpp
project1/src/: math.cc
project2/: CMakeLists.txt
project2/src/: main.cpp
